--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "firebase:deploy": "npm run build && firebase deploy",
+    "firebase:serve": "npm run build && firebase serve"
   },
   "dependencies": {
+    "firebase": "^12.3.0",
     "katex": "^0.16.22",
     "next": "15.4.4",
     "react": "19.1.0",
